FIX: link align right

--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@
   font-family: "DotGothic16", sans-serif;
   font-size: 2.3em;
   font-weight: 600;
-  justify-items: center;
+  justify-items: flex-end;
   letter-spacing: 0.3em;
   margin: 0.7em 0 0.7em 0;
   outline: none;
